Moved config out of Application.java. Reorganized project. Added tester persist. Added mapper. Added optimistic locking and auditing.